--- a/posts/2012-12-07-tu-quoque.markdown
+++ b/posts/2012-12-07-tu-quoque.markdown
@@ -17,6 +17,7 @@ convallis lectus quis venenatis. Phasellus laoreet magna in nibh cursus eu
 egestas nulla convallis. Aliquam vel ullamcorper risus. Fusce dictum, massa id
 consequat viverra, nulla ante tristique est, a faucibus nisi enim nec dui. Donec
 metus ligula, condimentum at porttitor eget, lobortis at quam.
+<!--more-->
 
 Aenean vel libero in magna ultricies congue in a odio. Donec faucibus rutrum
 ornare. Fusce dictum eleifend fermentum. Vestibulum vel nibh a metus porttitor
