--- a/posts/2012-08-12-spqr.markdown
+++ b/posts/2012-08-12-spqr.markdown
@@ -16,6 +16,7 @@ mollis, dui nibh aliquam neque, at ultricies leo ligula et arcu. Proin et mi
 eget tellus sodales lobortis. Sed tempor, urna vel pulvinar faucibus, lectus
 urna vehicula ante, at facilisis dolor odio at lorem. Morbi vehicula euismod
 urna, et imperdiet urna ornare vitae.
+<!--more-->
 
 Sed tincidunt sollicitudin ultrices. In hac habitasse platea dictumst. Morbi
 ligula lectus, egestas at ultricies nec, fringilla et tellus. Duis urna lorem,
