--- a/posts/2012-12-07-tu-quoque.markdown
+++ b/posts/2012-12-07-tu-quoque.markdown
@@ -1,7 +1,7 @@
 ---
 title: Tu Quoque
 author: Julius
-tag: latin, template
+tags: dummy
 ---
 
 Vestibulum leo turpis, dignissim quis ultrices sit amet, iaculis ac ligula.
